--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
     <div class="container">
         <h3>Media Artist from SCL</h3>
         <img src="00000000000000.PNG" alt="Text Based CV Project">
-        <p>Currently working on Computer Vision and text-based projects.</p>
-        <p>Contact me for projects at <a href="mailto:sakoppipoipoipoj@icloud.com" id="email">sakayamiuyiuy@icloud.com</a></p> 
+        <p>Currently working on Computer Vision applications and stuff</p> 
+        <p>Contact me for your open source projects at <a href="mailto:sakayama666@icloud.com" id="email">sakayama666@icloud.com</a></p> 
     </div>
     
     <div class="toggles">
