--- a/index.html
+++ b/index.html
@@ -52,8 +52,7 @@
         <h3>Media Artist from SCL</h3>
         <img src="00000000000000.PNG" alt="Text Based CV Project">
         <p>Currently working on Computer Vision and text-based projects.</p>
-        <p>Contact me for projects at <a href="mailto:sakoppipoipoipoj@icloud.com" id="email">sakayamiuyiuy@icloud.com</a></p>
-        <!-- New paragraph added -->
+        <p>Contact me for projects at <a href="mailto:sakayama666@icloud.com" id="email">sakayamma666@icloud.com</a></p>
         <p>I teach technologies in web, mobile, and media design tools for art and architecture and design professionals, including 3D technologies, code applied to design modeling, service design, and job interview preparations for tech roles.</p>
     </div>
 
@@ -142,7 +141,6 @@
             const themes = ['retro', 'cyberpunk', 'gothic', 'hacker', 'neon', 'ocean', 'classic', 'modern', 'minimalist', 'unicorn', 'hello_kitty', 'kuromi', 'keroppi'];
             themes.forEach(t => {
                 document.body.classList.remove(t);
-                document.querySelectorAll('input[name="themeToggle"]').forEach(input => input.checked = false); // Uncheck other toggles
             });
 
             // Add the selected theme class
@@ -151,6 +149,7 @@
     </script>
 </body>
 </html>
+
 
 
 
